--- a/angel's love/angel's love/party_wear_store.html
+++ b/angel's love/angel's love/party_wear_store.html
@@ -359,7 +359,7 @@
             Mom & Daugter 
             </button>
              <button class="category-filter px-4 py-2 rounded-full bg-gray-100 text-gray-700 font-medium hover:bg-gray-200 transition-colors" data-category="couple">
-            Couple 
+            Preshoot
             </button>
             <button class="category-filter px-4 py-2 rounded-full bg-gray-100 text-gray-700 font-medium hover:bg-gray-200 transition-colors" data-category="pregnet">
             Pregnent
